--- a/Research_on_water_status_Chapters/Chapter1_Introduction.tex
+++ b/Research_on_water_status_Chapters/Chapter1_Introduction.tex
@@ -7,12 +7,17 @@ Their versatility allows them to function not only as a small-scale distributed 
 % 它们的多功能性使它们不仅可以作为小型分布式电源，还可以作为大功率运输系统的能源，从而展示了其广泛的适用性\cite{sharafOverviewFuelCell2014}。
 Nevertheless, the reliability, stability, and durability of the fuel cell stack, as the central component of the fuel cell power system, have emerged as critical factors influencing the extensive commercialization of fuel cell products.
 % 然而，燃料电池电堆作为燃料电池动力系统的核心部件，其可靠性、稳定性和耐用性已成为影响燃料电池产品广泛商业化的关键因素。
-% TODO: 尽可能去掉精确的数字表达。讲 水很重要，干燥会造成什么样的影响。缺水会导致什么样的损伤。
-% TODO: 浓缩含水检测的方法
+% DONE: 尽可能去掉精确的数字表达。
+% DONE: 浓缩含水检测的方法
 % TODO: 把含水状态检测方法的部分分别讲一下优缺点
 % TODO: 基于阻抗的和基于含水量的方法之间有什么区别
-During the operational phase of the fuel cell, it is imperative to maintain the internal proton exchange membrane (PEM) in an optimal state of hydration to ensure the proton conduction ability remains at its peak, thereby achieving efficient and stable output performance of the fuel cell. Hydration state failure is the most prevalent failure mode of fuel cells, accounting for approximately 52 of total failures, primarily manifested as drying and flooding. Short-term hydration state failure can induce fluctuations and reductions in the output performance of the fuel cell. If this condition persists, it may lead to irreversible attenuation.
-% 在燃料电池运行阶段，必须保持内部质子交换膜（PEM）处于最佳水合状态，以保证质子传导能力保持在峰值，从而实现燃料电池高效稳定的输出性能。水合状态失效是燃料电池最常见的失效模式，约占总失效的 52 例，主要表现为干燥和水淹。短期水合状态失效会引起燃料电池输出性能的波动和降低。如果这种情况持续存在，可能会导致不可逆的衰减。
+During the operational phase of the fuel cell, it is imperative to maintain the internal proton exchange membrane (PEM) in an optimal state of hydration to ensure the proton conduction ability remains at its peak, thereby achieving efficient and stable output performance of the fuel cell. 
+Hydration state failure is the most prevalent failure mode of fuel cells, accounting for approximately 52 of total failures, primarily manifested as drying and flooding. 
+Short-term hydration state failure can induce fluctuations and reductions in the output performance of the fuel cell. If this condition persists, it may lead to irreversible attenuation.
+The insufficiency of water in PEMFC could result the decrease of proton conductivity\cite{shen_partial_2020,ous_degradation_2013,xiao_influence_2023}.
+% DONE: 讲水很重要，干燥会造成什么样的影响。缺水会导致什么样的损伤。
+% 在燃料电池运行阶段，必须保持内部质子交换膜（PEM）处于最佳水合状态，以保证质子传导能力保持在峰值，从而实现燃料电池高效稳定的输出性能。
+% 水合状态失效是燃料电池最常见的失效模式，约占总失效的 52 例，主要表现为干燥和水淹。短期水合状态失效会引起燃料电池输出性能的波动和降低。如果这种情况持续存在，可能会导致不可逆的衰减。
 \par
 Under dry failure, the water content inside the stack is too low to keep an sufficiently hydrated state,
 and the internal resistance increases and heat production increases since some region of the PEM are not fully hydrated.
@@ -29,11 +34,11 @@ In addition to the direct impact on output performance, the internal hydration s
 Currently, studies focusing on the characterization of the internal hydration state of fuel cells have yielded significant findings. Standard indicators utilized for ascertaining the hydration state of fuel cells encompass direct observation or computation of water content, electrical signals, pressure drop signals, and electrochemical signals \cite{hussainiVisualizationQuantificationCathode2009}.
 % 目前，针对燃料电池内部水合状态表征的研究已经取得了重要的发现。用于确定燃料电池水合状态的标准指标包括直接观察或计算水含量、电信号、压降信号和电化学信号
 \par
-The identification of a fuel cell's hydration state fundamentally involves determining the internal water content, making this the most basic and accurate assessment. Direct observation of water content can be facilitated through the transparent cell method and the neutron imaging method. The transparent cell method modifies the traditional fuel cell structure, employing transparent end plates and flow field plates to directly observe the quantity of liquid water within the flow field\cite{leeVisualizationFloodingSingle2012}. Hussaini et al\cite{hussainiVisualizationQuantificationCathode2009} designed a fuel cell with an effective area of 14cm², containing seven straight channels, and conducted a visual examination of the liquid water content in the fuel cell channels under typical automotive conditions. Yang et al\cite{yangVisualizationLiquidWater2004} utilized a transparent fuel cell for experiments to observe the process of liquid water transfer, discovering that water droplets initially appear on the GDL surface and adhere to the GDL surface due to surface tension. The water droplets progressively enlarge until they make contact with the flow channel wall, which exhibits stronger hydrophilicity. If the droplets on the flow channel are sufficiently thick, they may obstruct the channel and disrupt the airflow. The neutron imaging method is predicated on the principle that rays will attenuate when traversing an object. Given that different materials exhibit varying attenuation characteristics for neutron beams, particularly as water has higher absorbency than other materials such as metals, the internal water content can be measured using the transmitted neutron dose rate. Pekula\cite{pekulaStudyWaterDistribution2005} and Trabold\cite{traboldSituInvestigationWater2006} employed neutron imaging technology and found that water accumulation is likely to occur where the flow channel turns, providing appropriate explanations for each. However, the high cost and complex operation of current neutron imaging equipment have limited its widespread adoption.
-% 燃料电池水合状态的识别从根本上涉及确定内部含水量，这是最基本、最准确的评估。通过透明池法和中子成像法可以方便地直接观察水分含量。透明电池方法修改了传统燃料电池结构，采用透明端板和流场板直接观察流场内液态水的量\cite{leeVisualizationFloodingSingle2012}。Hussaini 等人\cite{hussainiVisualizationQuantificationCathode2009}设计了一个有效面积为 14cm²的燃料电池，包含七个直通道，并在典型的汽车条件下对燃料电池通道中的液态水含量进行了目视检查。Yang 等人\cite{yangVisualizationLiquidWater2004}利用透明燃料电池进行实验，观察液态水转移的过程，发现水滴最初出现在 GDL 表面上，并由于表面张力而粘附在 GDL 表面上。水滴逐渐增大直至与流道壁接触，表现出更强的亲水性。如果流道上的液滴足够厚，它们可能会阻塞通道并扰乱气流。中子成像方法基于射线穿过物体时会衰减的原理。鉴于不同的材料对中子束表现出不同的衰减特性，特别是当水比金属等其他材料具有更高的吸收性时，可以使用透射中子剂量率来测量内部含水量。Pekula\cite{pekulaStudyWaterDistribution2005}和 Trabold\cite{traboldSituInvestigationWater2006}采用中子成像技术，发现水流通道转弯处很可能发生积水，并为两者提供了适当的解释。然而，当前中子成像设备的高成本和复杂的操作限制了其广泛采用。
+The identification of a fuel cell's hydration state fundamentally involves determining the internal water content, making this the most basic and accurate assessment. Direct observation of water content can be facilitated through the transparent cell method and the neutron imaging method. The transparent cell method modifies the traditional fuel cell structure, employing transparent end plates and flow field plates to directly observe the quantity of liquid water within the flow field\cite{leeVisualizationFloodingSingle2012}. Hussaini et al\cite{hussainiVisualizationQuantificationCathode2009} designed a fuel cell with an effective area of 14cm², containing seven straight channels, and conducted a visual examination of the liquid water content in the fuel cell channels under typical automotive conditions. Yang et al\cite{yangVisualizationLiquidWater2004} utilized a transparent fuel cell for experiments to observe the process of liquid water transfer, discovering that water droplets initially appear on the GDL surface and adhere to the GDL surface due to surface tension. The neutron imaging method is predicated on the principle that rays will attenuate when traversing an object. Given that different materials exhibit varying attenuation characteristics for neutron beams, particularly as water has higher absorbency than other materials such as metals, the internal water content can be measured using the transmitted neutron dose rate. Pekula\cite{pekulaStudyWaterDistribution2005} and Trabold\cite{traboldSituInvestigationWater2006} employed neutron imaging technology and found that water accumulation is likely to occur where the flow channel turns, providing appropriate explanations for each. However, the high cost and complex operation of current neutron imaging equipment have limited its widespread adoption.
+% 燃料电池水合状态的识别从根本上涉及确定内部含水量，这是最基本、最准确的评估。通过透明池法和中子成像法可以方便地直接观察水分含量。透明电池方法修改了传统燃料电池结构，采用透明端板和流场板直接观察流场内液态水的量\cite{leeVisualizationFloodingSingle2012}。Hussaini 等人\cite{hussainiVisualizationQuantificationCathode2009}设计了一个有效面积为 14cm²的燃料电池，包含七个直通道，并在典型的汽车条件下对燃料电池通道中的液态水含量进行了目视检查。Yang 等人\cite{yangVisualizationLiquidWater2004}利用透明燃料电池进行实验，观察液态水转移的过程，发现水滴最初出现在 GDL 表面上，并由于表面张力而粘附在 GDL 表面上。中子成像方法基于射线穿过物体时会衰减的原理。鉴于不同的材料对中子束表现出不同的衰减特性，特别是当水比金属等其他材料具有更高的吸收性时，可以使用透射中子剂量率来测量内部含水量。Pekula\cite{pekulaStudyWaterDistribution2005}和 Trabold\cite{traboldSituInvestigationWater2006}采用中子成像技术，发现水流通道转弯处很可能发生积水，并为两者提供了适当的解释。然而，当前中子成像设备的高成本和复杂的操作限制了其广泛采用。
 \par
-Consequently, researchers have considered utilizing the law of conservation of mass to compute the water content within the fuel cell. When the fuel cell is operating stably, the flow rate of residual water can be calculated by measuring the discharged water. Zhao et al\cite{zhaoStudyWaterTransport2021} employed a single transparent fuel cell with an active area of 25cm to conduct tests under varying operating conditions.
-% 因此，研究人员考虑利用质量守恒定律来计算燃料电池内的水含量。当燃料电池稳定运行时，通过测量排出的水量即可计算出残留水的流量。赵等人\cite{zhaoStudyWaterTransport2021}采用活性面积为 25cm 的单个透明燃料电池在不同的操作条件下进行测试。
+Consequently, researchers have considered utilizing the law of conservation of mass to compute the water content within the fuel cell. When the fuel cell is operating stably, the flow rate of residual water can be calculated by measuring the discharged water. Zhao et al\cite{zhaoStudyWaterTransport2021} employed a single transparent fuel cell to conduct tests under varying operating conditions.
+% 因此，研究人员考虑利用质量守恒定律来计算燃料电池内的水含量。当燃料电池稳定运行时，通过测量排出的水量即可计算出残留水的流量。赵等人\cite{zhaoStudyWaterTransport2021}采用单个透明燃料电池在不同的操作条件下进行测试。
 By comparing the calculated rate of change in water content within the fuel cell and the water distribution in the flow channel, the accuracy of the model was validated.
 % 通过比较计算出的燃料电池内含水量的变化率和流道内的水分布情况，验证了模型的准确性。
 \par
@@ -55,7 +60,7 @@ The pressure drop between the inlet and outlet of the fuel cell is mainly caused
 	\caption[short]{The change of cathode and anode voltage drop with time during flooding process}
 	\label{fig:figure1}
 \end{figure}
-The detection methods based on electrochemical signals mainly include electrochemical impedance spectroscopy, current interruption method, and cyclic voltammetry, etc. Among them, electrochemical impedance spectroscopy is the most common hydration state detection method because it can distinguish different electrochemical processes and can be tested online \cite{yousfisteinerDiagnosisPolymerElectrolyte2011,chenOperationCharacteristicsCarbon2015}. The figure \ref{fig:figure1} shows the difference in fuel cell impedance spectra under different air humidity conditions. As the air humidity decreases, the value of the high-frequency impedance segment (i.e., the intercept of the impedance spectrum with the real axis) gradually increases, the impedance spectrum moves to the right, and the radius of the low-frequency arc segment also gradually increases \cite{hussainiVisualizationQuantificationCathode2009}, which can be used as an indicator of the hydration state of the fuel cell.
+The detection methods based on electrochemical signals mainly include electrochemical impedance spectroscopy, current interruption method, and cyclic voltammetry, etc. Among them, electrochemical impedance spectroscopy is the most common hydration state detection method because it can distinguish different electrochemical processes and can be tested online \cite{yousfisteinerDiagnosisPolymerElectrolyte2011,chenOperationCharacteristicsCarbon2015}. The figure \ref{fig:figure1} shows the difference in fuel cell impedance spectra under different air humidity conditions. As the air humidity decreases, the value of the high-frequency impedance segment (i.e., the intercept of the impedance spectrum with the real axis) gradually increases, the impedance spectrum moves to the right, and the radius of the low-frequency arc segment also gradually increases \cite{hussainiVisualizationQuantificationCathode2009,mocoteguy_study_2020,laribi_impedance_2016}, which can be used as an indicator of the hydration state of the fuel cell.
 % 基于电化学信号的检测方法主要有电化学阻抗谱、电流中断法、循环伏安法等。其中，电化学阻抗谱是最常见的水化状态检测方法，因为它可以区分不同的电化学过程，并且可以在线测试\ 引用{yousfisteinerDiagnosisPolymerElectrolyte2011，chenOperationCharacteristicsCarbon2015}。图\ref{fig:figure1}显示了不同空气湿度条件下燃料电池阻抗谱的差异。随着空气湿度的降低，高频阻抗段的值（即阻抗谱与实轴的截距）逐渐增大，阻抗谱向右移动，低频圆弧段的半径增大 也逐渐增加\cite{hussainiVisualizationQuantificationCathode2009}，可以作为燃料电池水合状态的指标。
 \par
 When analyzing the relationship between impedance spectra and the internal hydration state of fuel cells, equivalent circuit models are often introduced. The model generally includes resistors, capacitors, inductors, and Warburg elements\cite{tangRecentProgressUse2020}. The model is capable of quantitatively analyzing the electrochemical process.  The key to this method is the establishment of equivalent models and parameter identification. Fouquet et al.[25] extended the standard capacitor to a constant phase element, proving that the three resistance values of the model are related to the relative humidity of the air supply. Zhang et al.[26] used a neural network method to complete parameter identification, and the predicted Nyquist plot almost completely coincides with the measured value, and by directly predicting the parameters of the equivalent circuit, they detailed the degree of influence of different processes on fuel cell performance. BMW proposed a method for online monitoring of impedance, which requires collecting five frequency points, divided into three groups to fit the Randles circuit, obtaining ohmic impedance, polarization resistance and double layer capacitance\cite{fouquetModelBasedPEM2006}.
