--- a/Research_on_water_status_Chapters/ref.bib
+++ b/Research_on_water_status_Chapters/ref.bib
@@ -513,7 +513,6 @@
   pages = {233820},
   issn = {0378-7753},
   doi = {10.1016/j.jpowsour.2023.233820},
-  url = {https://www.sciencedirect.com/science/article/pii/S0378775323011965},
   urldate = {2024-03-14},
   abstract = {In this work, a fundamental cathode catalyst degradation model is developed in order to simulate fuel cell stack durability under realistic vehicle operation. A dynamic platinum degradation model featuring platinum dissolution and redeposition is developed to account for the Ostwald ripening phenomenon. The model is then calibrated for a variety of accelerated stress test data with different upper and lower potential limits and temperatures. Next, a case study of fuel cell transit bus operation in the city of Victoria, B.C., Canada is carried out to investigate the effects of stack size and temperature on the cathode catalyst durability. To this end, the required power density and cell voltage are calculated from the drive cycle considering vehicle dynamics and specifications. Larger stacks are found to experience higher upper potential limits; thus, showing lower lifetimes. The cathode lifetime is predicted to grow 379\% at 80°C if the stack nominal power is lowered from 396 to 132~kW while the performance requirement is met. The temperature is also shown to have a tremendous impact on the cathode lifetime. A temperature drop from 80 to 60°C results in 154\% cathode lifetime enhancement for a stack nominal power of 264~kW.},
   keywords = {Catalyst,Durability,Fuel cell,Fuel cell transit bus,Ostwald ripening,Platinum degradation},
@@ -531,8 +530,82 @@
   pages = {441--448},
   issn = {03787753},
   doi = {10.1016/j.jpowsour.2007.12.100},
-  url = {https://linkinghub.elsevier.com/retrieve/pii/S0378775307028674},
   urldate = {2024-03-14},
   langid = {english},
   file = {C:\Users\Yiyu\Zotero\storage\VEM56HHX\Bonnet et al_2008_Design of an 80kWe PEM fuel cell system.pdf}
+}
+
+@article{shen_partial_2020,
+	title = {Partial flooding and its effect on the performance of a proton exchange membrane fuel cell},
+	volume = {207},
+	issn = {01968904},
+	doi = {10.1016/j.enconman.2020.112537},
+	pages = {112537},
+	journaltitle = {Energy Conversion and Management},
+	shortjournal = {Energy Conversion and Management},
+	author = {Shen, Jun and Xu, Liang and Chang, Huawei and Tu, Zhengkai and Chan, Siew Hwa},
+	urldate = {2024-07-26},
+	date = {2020-03},
+	langid = {english},
+}
+
+
+@article{ous_degradation_2013,
+	title = {Degradation aspects of water formation and transport in Proton Exchange Membrane Fuel Cell: A review},
+	volume = {240},
+	issn = {03787753},
+	doi = {10.1016/j.jpowsour.2013.04.044},
+	shorttitle = {Degradation aspects of water formation and transport in Proton Exchange Membrane Fuel Cell},
+	pages = {558--582},
+	journaltitle = {Journal of Power Sources},
+	shortjournal = {Journal of Power Sources},
+	author = {Ous, T. and Arcoumanis, C.},
+	urldate = {2024-07-26},
+	date = {2013-10},
+	langid = {english},
+	file = {Ous_Arcoumanis_2013_Degradation aspects of water formation and transport in Proton Exchange.pdf:C\:\\Users\\Yiyu\\Zotero\\storage\\GCGZWPBQ\\Ous_Arcoumanis_2013_Degradation aspects of water formation and transport in Proton Exchange.pdf:application/pdf},
+}
+
+
+@article{xiao_influence_2023,
+	title = {The influence of external operating conditions on membrane drying faults of proton-exchange membrane fuel cells},
+	volume = {285},
+	issn = {03605442},
+	doi = {10.1016/j.energy.2023.128787},
+	pages = {128787},
+	journaltitle = {Energy},
+	author = {Xiao, Fei and Chen, Tao and Gan, Zhongyu and Zhang, Ruixuan},
+	urldate = {2024-07-26},
+	date = {2023-12},
+	langid = {english},
+}
+
+@article{mocoteguy_study_2020,
+	title = {Study of the impact of water management on the performance of {PEMFC} commercial stacks by impedance spectroscopy},
+	volume = {45},
+	issn = {03603199},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0360319920315421},
+	doi = {10.1016/j.ijhydene.2020.04.139},
+	pages = {16724--16737},
+	number = {33},
+	journaltitle = {International Journal of Hydrogen Energy},
+	author = {Moçotéguy, P. and Ludwig, B. and Beretta, D. and Pedersen, T.},
+	urldate = {2024-07-28},
+	date = {2020-06},
+	langid = {english},
+}
+
+@article{laribi_impedance_2016,
+	title = {Impedance model for diagnosis of water management in fuel cells using artificial neural networks methodology},
+	volume = {41},
+	issn = {03603199},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0360319916307315},
+	doi = {10.1016/j.ijhydene.2016.07.099},
+	pages = {17093--17101},
+	number = {38},
+	journaltitle = {International Journal of Hydrogen Energy},
+	author = {Laribi, Slimane and Mammar, Khaled and Hamouda, Messaoud and Sahli, Youcef},
+	urldate = {2024-07-28},
+	date = {2016-10},
+	langid = {english},
 }
