--- a/Research_on_water_status_Chapters/Chapter3_Results.tex
+++ b/Research_on_water_status_Chapters/Chapter3_Results.tex
@@ -1,8 +1,8 @@
 \section{Results and discussion}
 \subsection{Effect of operating temperature on water flow rate outflow from air side}
 
-Figure \ref{fig:airside_waterflow_120A_ratio} shows the change in the water flow out of the air side at different working temperatures. As can be seen from the figure \ref{fig:fig5a}, as the temperature rises, the water content in the air side exhaust gas generally shows an upward trend. The higher the temperature, the higher the saturation vapor pressure of the fuel cell. Under the same water content, the relative humidity will decrease at this time, which is equivalent to the generation of less liquid water inside the fuel cell, and the ability of the gas to carry water is improved. This change applies to both the air side and the hydrogen side, which is shown in figure \ref{fig:figure4b} and figure \ref{fig:figure4c}. Therefore, under the same other conditions, the water flow out of the fuel cell stack by the air increases with the increase in temperature, and more liquid water is collected by the air side exhaust gas collection device.
-% 图\ref{fig:airside_waterflow_120A_ratio}显示了不同工作温度下空气侧流出水流量的变化。 从图\ref{fig:fig5}(a)可以看出，随着温度的升高，空气侧废气中的含水量总体呈上升趋势。 温度越高，燃料电池的饱和蒸气压越高。 相同含水量下，此时相对湿度会降低，相当于燃料电池内部产生的液态水较少，气体携带水的能力提高。 这种变化适用于空气侧和氢气侧，如图（b）和图（c）所示。 因此，在其他条件相同的情况下，空气从燃料电池堆流出的水量随着温度的升高而增加，空气侧废气收集装置收集到更多的液态水。
+Figure \ref{fig:fig5} shows the change in the water flow out of the air side at different working temperatures. As can be seen from the figure \ref{fig:fig5a}, as the temperature rises, the water content in the air side exhaust gas generally shows an upward trend. The higher the temperature, the higher the saturation vapor pressure of the fuel cell. Under the same water content, the relative humidity will decrease at this time, which is equivalent to the generation of less liquid water inside the fuel cell, and the ability of the gas to carry water is improved. This change applies to both the air side and the hydrogen side, which is shown in figure \ref{fig:figure4b} and figure \ref{fig:figure4c}. Therefore, under the same other conditions, the water flow out of the fuel cell stack by the air increases with the increase in temperature, and more liquid water is collected by the air side exhaust gas collection device.
+% 图\ref{fig:fig5}显示了不同工作温度下空气侧流出水流量的变化。 从图\ref{fig:fig5}(a)可以看出，随着温度的升高，空气侧废气中的含水量总体呈上升趋势。 温度越高，燃料电池的饱和蒸气压越高。 相同含水量下，此时相对湿度会降低，相当于燃料电池内部产生的液态水较少，气体携带水的能力提高。 这种变化适用于空气侧和氢气侧，如图（b）和图（c）所示。 因此，在其他条件相同的情况下，空气从燃料电池堆流出的水量随着温度的升高而增加，空气侧废气收集装置收集到更多的液态水。
 \par
 It is worth noting that when the load current is 120A, the impact of the working temperature on the water flow of the air side is slightly different under different metering ratios. As the air metering ratio increases, the growth rate of the water flow on the air side gradually decreases. This is because at a small current density, the fuel cell produces less water due to the electrochemical reaction, and at the same time, the high-speed high-temperature reaction gas has a strong ability to carry water, and the water produced by the fuel cell has been completely carried out by the reaction gas. Therefore, even if the air metering ratio increases, the reaction gas cannot carry out more water. For the working conditions of low working temperature and large load current, the ability of the reaction gas to carry water is low or the fuel cell produces more water, so there is still some water vapor or liquid water remaining in the system. At this time, if the air flow is increased, the water flow out of the system will also increase accordingly.
 % 值得注意的是，负载电流为120A时，不同计量比下工作温度对空气侧水流量的影响略有不同。 随着空气计量比的增大，空气侧水流量的增长率逐渐减小。 这是因为在较小的电流密度下，燃料电池因电化学反应产生的水较少，同时高速高温反应气体具有很强的携带水的能力，燃料电池产生的水 燃料电池的反应已完全由气体进行。 因此，即使空气计量比增大，反应气体也不能带出更多的水。 对于工作温度低、负载电流大的工况，反应气体携带水的能力较低或燃料电池产生的水较多，因此系统中仍残留有一些水蒸气或液态水。 此时，如果空气流量增加，则系统流出的水流量也会相应增加。
