把Figure全部换成Fig（首字母大写）

--- a/Sensor_Fusion_chapters/NumericalModelling.tex
+++ b/Sensor_Fusion_chapters/NumericalModelling.tex
@@ -9,7 +9,7 @@ This model proposes the following assumptions:
     \item The internal temperature of the stack is uniform, and the heat transfer process is not considered.
     \item The different cells in the stack are uniform.
 \end{itemize}
-In summary, the regional division and state selection of this model are shown in Figure 1. For the meanings of different variables, please refer to the symbol description.
+In summary, the regional division and state selection of this model are shown in Fig 1. For the meanings of different variables, please refer to the symbol description.
 \begin{figure}[h]
     \centering
     \includegraphics{Sensor_Fusion_pictures/figure1.jpg}
