--- a/Sensor_Fusion_chapters/Observer.tex
+++ b/Sensor_Fusion_chapters/Observer.tex
@@ -2,7 +2,7 @@
 
 \subsection{Particle filter algorithm}
 
-The specific steps of the particle filter algorithm are as Figure 2. Steps three, four, and five are repeated to achieve recursion.
+The specific steps of the particle filter algorithm are as Fig 2. Steps three, four, and five are repeated to achieve recursion.
 
 \begin{figure}
     \centering
