--- a/Research_on_water_status_Chapters/Chapter1_Introduction.tex
+++ b/Research_on_water_status_Chapters/Chapter1_Introduction.tex
@@ -60,7 +60,7 @@ The pressure drop between the inlet and outlet of the fuel cell is mainly caused
 	\caption[short]{The change of cathode and anode voltage drop with time during flooding process}
 	\label{fig:figure1}
 \end{figure}
-The detection methods based on electrochemical signals mainly include electrochemical impedance spectroscopy, current interruption method, and cyclic voltammetry, etc. Among them, electrochemical impedance spectroscopy is the most common hydration state detection method because it can distinguish different electrochemical processes and can be tested online \cite{yousfisteinerDiagnosisPolymerElectrolyte2011,chenOperationCharacteristicsCarbon2015}. The figure \ref{fig:figure1} shows the difference in fuel cell impedance spectra under different air humidity conditions. As the air humidity decreases, the value of the high-frequency impedance segment (i.e., the intercept of the impedance spectrum with the real axis) gradually increases, the impedance spectrum moves to the right, and the radius of the low-frequency arc segment also gradually increases \cite{hussainiVisualizationQuantificationCathode2009,mocoteguy_study_2020,laribi_impedance_2016}, which can be used as an indicator of the hydration state of the fuel cell.
+The detection methods based on electrochemical signals mainly include electrochemical impedance spectroscopy, current interruption method, and cyclic voltammetry, etc. Among them, electrochemical impedance spectroscopy is the most common hydration state detection method because it can distinguish different electrochemical processes and can be tested online \cite{yousfisteinerDiagnosisPolymerElectrolyte2011,chenOperationCharacteristicsCarbon2015}. The Fig \ref{fig:figure1} shows the difference in fuel cell impedance spectra under different air humidity conditions. As the air humidity decreases, the value of the high-frequency impedance segment (i.e., the intercept of the impedance spectrum with the real axis) gradually increases, the impedance spectrum moves to the right, and the radius of the low-frequency arc segment also gradually increases \cite{hussainiVisualizationQuantificationCathode2009,mocoteguy_study_2020,laribi_impedance_2016}, which can be used as an indicator of the hydration state of the fuel cell.
 % 基于电化学信号的检测方法主要有电化学阻抗谱、电流中断法、循环伏安法等。其中，电化学阻抗谱是最常见的水化状态检测方法，因为它可以区分不同的电化学过程，并且可以在线测试\ 引用{yousfisteinerDiagnosisPolymerElectrolyte2011，chenOperationCharacteristicsCarbon2015}。图\ref{fig:figure1}显示了不同空气湿度条件下燃料电池阻抗谱的差异。随着空气湿度的降低，高频阻抗段的值（即阻抗谱与实轴的截距）逐渐增大，阻抗谱向右移动，低频圆弧段的半径增大 也逐渐增加\cite{hussainiVisualizationQuantificationCathode2009}，可以作为燃料电池水合状态的指标。
 \par
 When analyzing the relationship between impedance spectra and the internal hydration state of fuel cells, equivalent circuit models are often introduced. The model generally includes resistors, capacitors, inductors, and Warburg elements\cite{tangRecentProgressUse2020}. The model is capable of quantitatively analyzing the electrochemical process.  The key to this method is the establishment of equivalent models and parameter identification. Fouquet et al.[25] extended the standard capacitor to a constant phase element, proving that the three resistance values of the model are related to the relative humidity of the air supply. Zhang et al.[26] used a neural network method to complete parameter identification, and the predicted Nyquist plot almost completely coincides with the measured value, and by directly predicting the parameters of the equivalent circuit, they detailed the degree of influence of different processes on fuel cell performance. BMW proposed a method for online monitoring of impedance, which requires collecting five frequency points, divided into three groups to fit the Randles circuit, obtaining ohmic impedance, polarization resistance and double layer capacitance\cite{fouquetModelBasedPEM2006}.
