--- a/Research_on_water_status_Chapters/Chapter3_Results.tex
+++ b/Research_on_water_status_Chapters/Chapter3_Results.tex
@@ -1,21 +1,21 @@
 \section{Results and discussion}
 \subsection{Effect of operating temperature on water flow rate outflow from air side}
 
-Figure \ref{fig:fig5} shows the change in the water flow out of the air side at different working temperatures. As can be seen from the figure \ref{fig:fig5a}, as the temperature rises, the water content in the air side exhaust gas generally shows an upward trend. The higher the temperature, the higher the saturation vapor pressure of the fuel cell. Under the same water content, the relative humidity will decrease at this time, which is equivalent to the generation of less liquid water inside the fuel cell, and the ability of the gas to carry water is improved. This change applies to both the air side and the hydrogen side, which is shown in figure \ref{fig:figure4b} and figure \ref{fig:figure4c}. Therefore, under the same other conditions, the water flow out of the fuel cell stack by the air increases with the increase in temperature, and more liquid water is collected by the air side exhaust gas collection device.
+Fig \ref{fig:fig5} shows the change in the water flow out of the air side at different working temperatures. As can be seen from the Fig \ref{fig:fig5a}, as the temperature rises, the water content in the air side exhaust gas generally shows an upward trend. The higher the temperature, the higher the saturation vapor pressure of the fuel cell. Under the same water content, the relative humidity will decrease at this time, which is equivalent to the generation of less liquid water inside the fuel cell, and the ability of the gas to carry water is improved. This change applies to both the air side and the hydrogen side, which is shown in Fig \ref{fig:figure4b} and Fig \ref{fig:figure4c}. Therefore, under the same other conditions, the water flow out of the fuel cell stack by the air increases with the increase in temperature, and more liquid water is collected by the air side exhaust gas collection device.
 % 图\ref{fig:fig5}显示了不同工作温度下空气侧流出水流量的变化。 从图\ref{fig:fig5}(a)可以看出，随着温度的升高，空气侧废气中的含水量总体呈上升趋势。 温度越高，燃料电池的饱和蒸气压越高。 相同含水量下，此时相对湿度会降低，相当于燃料电池内部产生的液态水较少，气体携带水的能力提高。 这种变化适用于空气侧和氢气侧，如图（b）和图（c）所示。 因此，在其他条件相同的情况下，空气从燃料电池堆流出的水量随着温度的升高而增加，空气侧废气收集装置收集到更多的液态水。
 \par
 It is worth noting that when the load current is 120A, the impact of the working temperature on the water flow of the air side is slightly different under different metering ratios. As the air metering ratio increases, the growth rate of the water flow on the air side gradually decreases. This is because at a small current density, the fuel cell produces less water due to the electrochemical reaction, and at the same time, the high-speed high-temperature reaction gas has a strong ability to carry water, and the water produced by the fuel cell has been completely carried out by the reaction gas. Therefore, even if the air metering ratio increases, the reaction gas cannot carry out more water. For the working conditions of low working temperature and large load current, the ability of the reaction gas to carry water is low or the fuel cell produces more water, so there is still some water vapor or liquid water remaining in the system. At this time, if the air flow is increased, the water flow out of the system will also increase accordingly.
 % 值得注意的是，负载电流为120A时，不同计量比下工作温度对空气侧水流量的影响略有不同。 随着空气计量比的增大，空气侧水流量的增长率逐渐减小。 这是因为在较小的电流密度下，燃料电池因电化学反应产生的水较少，同时高速高温反应气体具有很强的携带水的能力，燃料电池产生的水 燃料电池的反应已完全由气体进行。 因此，即使空气计量比增大，反应气体也不能带出更多的水。 对于工作温度低、负载电流大的工况，反应气体携带水的能力较低或燃料电池产生的水较多，因此系统中仍残留有一些水蒸气或液态水。 此时，如果空气流量增加，则系统流出的水流量也会相应增加。
 \subfile{Airside_Waterflow_figure_1.tex}
 \par
-Fig \ref{fig:fig5a} shows that as the temperature rises, the water content in the hydrogen side exhaust gas generally shows a downward trend, and even at 120A/70$^{\circ}C$, the water content in the hydrogen side exhaust gas is 0, the same result appears in 210A(fig \ref{fig:fig5c}) and 300A(fig \ref{fig:fig5c}). There are mainly two reasons for this phenomenon.  First, according to the principle of proton exchange membrane fuel cell reaction, the reaction product water is generated at the cathode (that is, the air side), and the fuel used by the fuel cell system is 99.99\% pure hydrogen. Therefore, the water inside the hydrogen side is mainly the water that migrates from the air side to the hydrogen side under the action of concentration diffusion and pressure diffusion. Since the hydrogen-air pressure difference is basically consistent (20kpa) during the experiment, the influence of pressure on water migration can be ignored when comparing. Second, the exhaust gas collected on the anode side needs to first pass through the water separator built into the fuel cell system to separate the unreacted hydrogen from the liquid water, and then it can be collected by the exhaust water collection device on the hydrogen side. And at higher working temperatures, the saturation vapor pressure of the gas on the hydrogen side rises, and the content of liquid water decreases relatively. These two factors cause the working temperature to rise and the water content flowing out of the hydrogen side to decrease.
+Fig \ref{fig:fig5a} shows that as the temperature rises, the water content in the hydrogen side exhaust gas generally shows a downward trend, and even at 120A/70$^{\circ}C$, the water content in the hydrogen side exhaust gas is 0, the same result appears in 210A(Fig \ref{fig:fig5c}) and 300A(Fig \ref{fig:fig5c}). There are mainly two reasons for this phenomenon.  First, according to the principle of proton exchange membrane fuel cell reaction, the reaction product water is generated at the cathode (that is, the air side), and the fuel used by the fuel cell system is 99.99\% pure hydrogen. Therefore, the water inside the hydrogen side is mainly the water that migrates from the air side to the hydrogen side under the action of concentration diffusion and pressure diffusion. Since the hydrogen-air pressure difference is basically consistent (20kpa) during the experiment, the influence of pressure on water migration can be ignored when comparing. Second, the exhaust gas collected on the anode side needs to first pass through the water separator built into the fuel cell system to separate the unreacted hydrogen from the liquid water, and then it can be collected by the exhaust water collection device on the hydrogen side. And at higher working temperatures, the saturation vapor pressure of the gas on the hydrogen side rises, and the content of liquid water decreases relatively. These two factors cause the working temperature to rise and the water content flowing out of the hydrogen side to decrease.
 % 由图\ref{fig:fig5}(a)可知，随着温度的升高，氢侧废气中的水含量总体呈下降趋势，即使在120A/70$^{\circ}C$下，水含量也呈下降趋势。 当氢气侧废气中的含量为0时，210A(fig \ref{fig:fig5}(c))和300A(fig \ref{fig:fig5}(c))中出现相同的结果。 造成这种现象的原因主要有两个。 首先，根据质子交换膜燃料电池反应原理，在阴极（即空气侧）生成反应产物水，燃料电池系统使用的燃料为99.99%的纯氢气。 因此，氢气侧内部的水主要是在浓度扩散和压力扩散的作用下从空气侧迁移到氢气侧的水。 由于实验过程中氢气与空气的压差基本一致（20kpa），因此比较时可以忽略压力对水迁移的影响。 其次，阳极侧收集的废气首先需要经过燃料电池系统内置的水分离器，将未反应的氢气与液态水分离，然后可由氢气侧的废气水收集装置收集 。 并且在较高的工作温度下，氢侧气体的饱和蒸气压升高，液态水的含量相对减少。 这两个因素导致工作温度升高，氢气侧流出的含水量减少。
 
 \subfile{Airside_Waterflow_figure_2.tex}
 
 \subsection{Influence of air metering ratio on the water flow out of the cathode and anode}
 
-Compare the water flow out of the air side and the hydrogen side at 120A, 210A, 300A load currents, different coolant inlet temperatures, and different air metering ratios, as shown in Fig \ref{fig:figure6a}. Similar to the impact of working temperature on the water flow out of the air side, under the same load current, the higher the air metering ratio, the more water is carried out of the stack by the unreacted air, which also applies to load current of 210A(fig \ref{fig:figure6b}) and 300A(fig \ref{fig:figure6c}). It should be noted that this growth is not unlimited. After reaching a certain air metering ratio, the growth of the water content in the air side exhaust gas slows down, especially when the load current is small and the working temperature is high. This is because at this time, the water produced by the electrochemical reaction of the fuel cell has been completely carried out of the fuel cell by high-temperature high-speed air. At this time, even if the air metering ratio continues to increase, the water content of the exhaust gas will not continue to increase.
+Compare the water flow out of the air side and the hydrogen side at 120A, 210A, 300A load currents, different coolant inlet temperatures, and different air metering ratios, as shown in Fig \ref{fig:figure6a}. Similar to the impact of working temperature on the water flow out of the air side, under the same load current, the higher the air metering ratio, the more water is carried out of the stack by the unreacted air, which also applies to load current of 210A(Fig \ref{fig:figure6b}) and 300A(Fig \ref{fig:figure6c}). It should be noted that this growth is not unlimited. After reaching a certain air metering ratio, the growth of the water content in the air side exhaust gas slows down, especially when the load current is small and the working temperature is high. This is because at this time, the water produced by the electrochemical reaction of the fuel cell has been completely carried out of the fuel cell by high-temperature high-speed air. At this time, even if the air metering ratio continues to increase, the water content of the exhaust gas will not continue to increase.
 % 比较120A、210A、300A负载电流、不同冷却液入口温度、不同空气计量比下空气侧和氢气侧流出的水流量，如图\ref{figure6}(a)所示。 与工作温度对空气侧水流量的影响类似，在相同的负载电流下，空气计量比越高，未反应的空气带出电堆的水就越多，这也适用于负载电流 210A(图\ref{图6}(b))和300A(图\ref{图6}(c))。 值得注意的是，这种增长并不是无限的。 达到一定的空气计量比后，空气侧废气中含水量的增长减慢，特别是在负载电流较小、工作温度较高时。 这是因为此时燃料电池电化学反应产生的水已经被高温高速空气完全带出燃料电池。 此时，即使空气计量比继续增加，废气的含水量也不会继续增加。
 \subfile{Airside_Waterflow_figure_grouped_by_temperature.tex}
 \par
